<resources>
    <string name="app_name">Ruscha o\'zbekcha lug\'at</string>
    <string name="search_hint">Qidirish</string>
    <string name="social">Bizning ijtimoiy tarmoqlarimiz 👇👇</string>
    <string name="telegram">https://t.me/androidstudio2026</string>
    <string name="github">https://github.com/Androiddasturlash</string>
    <string name="link_open_error">Havolani ochib bo‘lmadi</string>
    <string name="Telegram">Telegram</string>
    <string name="Github">GitHub</string>
    <string name="create_by">O\'zbekistonda ishlab chiqarilgan</string>
    <string name="developer">Dasturchi</string>
    <string name="developer_name">Mahmud Eshonqulov</string>
    <string name="version">versiya 1.0</string>
    <string name="about">Ilova haqida</string>
    <string name="about_description">Rus tilidagi so\‘zlarning o\‘zbekcha ma\’nolarini tez va qulay topish uchun mo\‘ljallangan lug\‘at ilovasi.</string>
    <string name="DeveloperMessage">Ushbu ilova yaratuvchisi</string>
    <string name="settings">Sozlamalar</string>
    <string name="all_delete">Barchasini o\‘chirish</string>
    <string name="favorite">Sevimlilar</string>
    <string name="no_favorite_found">Barcha sevimlilar yo\‘q.</string>
    <string name="yes">Ok</string>
    <string name="delete_favorites_title">Sevimlilarni o\‘chirish</string>
    <string name="delete_favorites_message">Barcha sevimli so\‘zlarni o\‘chirishni xohlaysizmi?</string>
    <string name="cancel">Bekor qilish</string>
    <string name="delete">O\‘chirish</string>
    <string name="favorite_added">Sevimlilarga qo\‘shildi</string>
    <string name="favorite_removed">Sevimlilardan o\‘chirildi</string>
    <string name="language">Dastur tili</string>
    <string name="share">Ulashish</string>
    <string name="lang">O\'zbekcha</string>
    <string name="general">UMUMIY</string>
    <string name="app_section">ILOVA</string>
    <string name="telegram_title">Telegram</string>
    <string name="telegram_message">Telegram kanalimizni ochishni xohlaysizmi?</string>
    <string name="github_title">GitHub</string>
    <string name="github_message">GitHub sahifamizni ochishni xohlaysizmi?</string>
    <string name="no_favorite_title">Sevimlilar hozircha bo\‘sh</string>
    <string name="no_favorite_description">Kerakli so\‘zlarni sevimlilarga qo‘\shing</string>
    <string name="favorite_add">Sevimlilarga qo\‘shish</string>
    <string name="favorite_remove">Sevimlilardan o\‘chirish</string>
</resources>